--- a/sass/libs/_vars.scss
+++ b/sass/libs/_vars.scss
@@ -41,10 +41,10 @@
 		fg-accent:			#ffffff,
 		border:				#c9c9c9,
 		border-bg:			rgba(144,144,144,0.075),
-		accent1:			#f2849e,
-		accent2:			#7ecaf6,
-		accent3:			#7bd0c1,
-		accent4:			#c75b9b,
-		accent5:			#ae85ca,
-		accent6:			#8499e7,
+		accent1:			#f2849e, // danger
+		accent2:			#7ecaf6, // info
+		accent3:			#7bd0c1, // success
+		accent4:			#c75b9b, // danger alt
+		accent5:			#ae85ca, // danger alt2
+		accent6:			#8499e7, // info alt
 	);
