--- a/css/ie9.css
+++ b/css/ie9.css
@@ -1,40 +1,1 @@
-/*
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
-/* Tiles */
-
-	.tiles:after {
-		content: '';
-		display: block;
-		clear: both;
-	}
-
-	.tiles article {
-		float: left;
-	}
-
-		.tiles article > a {
-			padding-top: 50%;
-			margin-top: -1.75em;
-		}
-
-		body:not(.is-touch) .tiles article:hover > .image {
-			-moz-transform: none;
-			-webkit-transform: none;
-			-ms-transform: none;
-			transform: none;
-		}
-
-/* Footer */
-
-	#footer > .inner section {
-		float: left;
-	}
-
-	#footer > .inner .copyright {
-		clear: both;
-		padding-top: 4em;
-	}
+.clearfix:after,.clearfix:before{display:table;content:"";line-height:0}.clearfix:after{clear:both}.tiles:after{content:'';display:block;clear:both}.tiles article{float:left}.tiles article>a{padding-top:50%;margin-top:-1.75em}body:not(.is-touch) .tiles article:hover>.image{transform:none}#footer>.inner section{float:left}#footer>.inner .copyright{clear:both;padding-top:4em}
