--- a/sass/libs/_mixins.scss
+++ b/sass/libs/_mixins.scss
@@ -54,3 +54,18 @@
 	@return url("data:image/svg+xml;charset=utf8,#{$svg}");
 
 }
+
+.clearfix {
+    *zoom: 1;
+    &:before,
+    &:after {
+        display: table;
+        content: "";
+        // Fixes Opera/contenteditable bug:
+        // http://nicolasgallagher.com/micro-clearfix-hack/#comment-36952
+        line-height: 0;
+    }
+    &:after {
+        clear: both;
+    }
+}
