--- a/sass/components/_tabs.scss
+++ b/sass/components/_tabs.scss
@@ -1,9 +1,8 @@
-.nav-tabs {
+.nav {
 	@extend .clearfix;
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	border-bottom: 2px solid _palette(border);
 
 	> li {
 		@extend .clearfix;
@@ -11,10 +10,23 @@
 		display: block;
 		float: left;
 		padding: 0;
+		margin-right: .5em;
 
 		> a {
 			position: relative;
 			display: block;
+			padding: .5em;
+		}
+	}
+}
+
+.nav-tabs {
+	border-bottom: 2px solid _palette(border);
+
+	> li {
+		margin-right: 0;
+
+		> a {
 			padding: 1em 2em;
 			border-bottom: 0;
 		}
@@ -30,10 +42,18 @@
 				position: absolute;
 				left: 0;
 				right: 0;
-				bottom: -2px;
-				height: 2px;
+				bottom: -3px;
+				height: 4px;
 				background: _palette(accent1);
 			}
+		}
+
+		> span {
+			position: relative;
+			display: block;
+			padding: 1em 2em;
+			border-bottom: 0;
+			color: #ccc;
 		}
 	}
 }
