--- a/sass/intelli.scss
+++ b/sass/intelli.scss
@@ -63,3 +63,12 @@ ul.actions li a {
 .form-group {
 	margin-bottom: _size(element-margin);
 }
+
+// Pagination
+
+.pagination {
+
+	.button {
+		vertical-align: middle;
+	}
+}
